Update project image source in index.html

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <section class="projects">
         <!-- Analisis de datos para estilos y patrones de sueño. -->
         <div class="project-card">
-            <img class="project-image" src="https://via.placeholder.com/400x180.png?text=Proyecto+1" alt="Proyecto 1">
+            <img class="project-image" src="https://github.com/amymarlene/mi-portafolio/blob/main/proyecto1.png?raw=true" alt="Proyecto 1">
             <div class="project-content">
                 <h3>Proyecto 1</h3>
                 <p>Este proyecto analiza el dataset "Lifestyle and Sleep Patterns" de Kaggle, explorando cómo los hábitos de vida afectan los niveles de estrés. El objetivo es Analizar la relación entre hábitos de vida y niveles de estrés, preparando los datos para un modelo predictivo.</p>
