Update project title in index.html

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <div class="project-card">
             <img class="project-image" src="https://raw.githubusercontent.com/amymarlene/mi-portafolio/main/proyecto1.png" alt="Proyecto 1">
             <div class="project-content">
-                <h3>Proyecto 1</h3>
+                <h3>Analisis de datos para estilos y patones de sueño.</h3>
                 <p>Analizar la relación entre hábitos de vida y niveles de estrés, identificando variables que afectan la salud y preparando los datos para un posible modelado predictivo..</p>
                 <a href="https://github.com/amymarlene/proyecto1" target="_blank">Ver repositorio</a>
             </div>
