--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <!-- Sección About / Presentación -->
     <section class="about">
         <div class="about-container">
-            <img class="profile-image" src="https://raw.github.com/amymarlene/mi-portafolio/blob/main/perfil.png?raw=true" alt="Mi foto">
+            <img class="profile-image" src="https://raw.githubusercontent.com/amymarlene/mi-portafolio/main/perfil.png" alt="Mi foto">
             <div class="about-text">
                 <h2>Amy Marlene</h2>
                 <p>¡Hola! Soy estudiante de Ingeniería Biomédica     y este es mi portafolio de proyectos. Explora mis trabajos haciendo clic en cada tarjeta.</p>
