--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     <section class="projects">
         <!-- Analisis de datos para estilos y patrones de sueño. -->
         <div class="project-card">
-            <img class="project-image" src="https://raw.githubusercontent.com/amymarlene/mi-portafolio/main/proyecto1.png" alt="Proyecto 1.">
+            <img class="project-image" src="https://raw.github.com/amymarlene/mi-portafolio/blob/main/perfil.png?raw=true" alt="Proyecto 1.">
             <div class="project-content">
                 <h3>Analisis de datos para estilos y patrones de sueño.</h3>
                 <p>Analizar la relación entre hábitos de vida y niveles de estrés, identificando variables que afectan la salud y preparando los datos para un posible modelado predictivo..</p>
