Fix formatting and update project details in index.html

--- a/index.html
+++ b/index.html
@@ -149,19 +149,19 @@
             <img class="profile-image" src="https://raw.githubusercontent.com/amymarlene/mi-portafolio/main/perfil.png" alt="Mi foto">
             <div class="about-text">
                 <h2>Amy Marlene</h2>
-                <p>¡Hola! Soy estudiante de Ingeniería Biomédica     y este es mi portafolio de proyectos. Explora mis trabajos haciendo clic en cada tarjeta.</p>
+                <p>¡Hola! Soy estudiante de Ingeniería Biomédica y este es mi portafolio de proyectos. Explora mis trabajos haciendo clic en cada tarjeta.</p>
             </div>
         </div>
     </section>
 
     <!-- Sección Proyectos -->
     <section class="projects">
-        <!-- Analisis de datos para estilos y patrones de sueño. -->
+        <!-- Proyecto 1 -->
         <div class="project-card">
-            <img class="project-image" src="https://raw.github.com/amymarlene/mi-portafolio/blob/main/perfil.png?raw=true" alt="Proyecto 1.">
+            <img class="project-image" src="https://raw.githubusercontent.com/amymarlene/mi-portafolio/main/proyecto1.png" alt="Proyecto 1">
             <div class="project-content">
-                <h3>Analisis de datos para estilos y patrones de sueño.</h3>
-                <p>Analizar la relación entre hábitos de vida y niveles de estrés, identificando variables que afectan la salud y preparando los datos para un posible modelado predictivo..</p>
+                <h3>Análisis de datos para estilos y patrones de sueño</h3>
+                <p>Analizar la relación entre hábitos de vida y niveles de estrés, identificando variables que afectan la salud y preparando los datos para un posible modelado predictivo.</p>
                 <a href="https://github.com/amymarlene/proyecto1" target="_blank">Ver repositorio</a>
             </div>
         </div>
@@ -193,4 +193,3 @@
 
 </body>
 </html>
-
