Update project links to use styled buttons

--- a/index.html
+++ b/index.html
@@ -113,8 +113,10 @@
             margin-bottom: 1.5rem;
         }
 
-        .project-content a {
+        /* Botón “Ver repositorio” */
+        .project-button {
             display: inline-block;
+            margin: 0 auto;
             padding: 0.5rem 1rem;
             background-color: #3b82f6;
             color: #fff;
@@ -122,8 +124,9 @@
             text-decoration: none;
             font-weight: bold;
             transition: background-color 0.3s;
+            text-align: center;
         }
-        .project-content a:hover {
+        .project-button:hover {
             background-color: #2563eb;
         }
 
@@ -162,7 +165,7 @@
             <div class="project-content">
                 <h3>Análisis de datos para estilos y patrones de sueño</h3>
                 <p>Analizar la relación entre hábitos de vida y niveles de estrés, identificando variables que afectan la salud y preparando los datos para un posible modelado predictivo.</p>
-                <a href="https://github.com/amymarlene/Tarea-2-Analisis-de-datos-Clasificaci-n-Binaria" target="_blank">Ver repositorio</a>
+                <a href="https://github.com/amymarlene/Tarea-2-Analisis-de-datos-Clasificaci-n-Binaria" target="_blank" class="project-button">Ver repositorio</a>
             </div>
         </div>
 
@@ -172,7 +175,7 @@
             <div class="project-content">
                 <h3>Proyecto 2</h3>
                 <p>Breve explicación de lo que hace el proyecto 2 y su propósito.</p>
-                <a href="https://github.com/amymarlene/proyecto2" target="_blank">Ver repositorio</a>
+                <a href="https://github.com/amymarlene/proyecto2" target="_blank" class="project-button">Ver repositorio</a>
             </div>
         </div>
 
@@ -182,7 +185,7 @@
             <div class="project-content">
                 <h3>Proyecto 3</h3>
                 <p>Breve explicación de lo que hace el proyecto 3 y su propósito.</p>
-                <a href="https://github.com/amymarlene/proyecto3" target="_blank">Ver repositorio</a>
+                <a href="https://github.com/amymarlene/proyecto3" target="_blank" class="project-button">Ver repositorio</a>
             </div>
         </div>
     </section>
