--- a/index.html
+++ b/index.html
@@ -171,10 +171,11 @@
 
         <!-- Proyecto 2 -->
         <div class="project-card">
-            <img class="project-image" src="https://raw.githubusercontent.com/amymarlene/mi-portafolio/main/proyecto2.png" alt="Proyecto 2">
+            <img class="project-image" src="https://raw.github.com/amymarlene/mi-portafolio/blob/main/Proyecto%202.png" alt="Proyecto 2">
             <div class="project-content">
-                <h3>Proyecto 2</h3>
-                <p>Breve explicación de lo que hace el proyecto 2 y su propósito.</p>
+                <h3>Modelado de datos para estilos y patrones de sueño</h3>
+                <p>Este proyecto realiza la **predicción de estrés** basado en hábitos de sueño y parámetros físicos usando modelos de clasificación en Python. Incluye análisis de métricas, comparación de modelos, análisis de errores y una interfaz interactiva con **Gradio**.
+</p>
                 <a href="https://github.com/amymarlene/proyecto2" target="_blank" class="project-button">Ver repositorio</a>
             </div>
         </div>
