--- a/index.html
+++ b/index.html
@@ -171,10 +171,10 @@
 
         <!-- Proyecto 2 -->
         <div class="project-card">
-            <img class="project-image" src="https://raw.github.com/amymarlene/mi-portafolio/blob/main/Proyecto%202.png" alt="Proyecto 2">
+            <img class="project-image" src="https://raw.githubusercontent.com/amymarlene/mi-portafolio/main/Proyecto%202.png" alt="Proyecto 2" alt="Proyecto 2">
             <div class="project-content">
                 <h3>Modelado de datos para estilos y patrones de sueño</h3>
-                <p>Este proyecto realiza la **predicción de estrés** basado en hábitos de sueño y parámetros físicos usando modelos de clasificación en Python. Incluye análisis de métricas, comparación de modelos, análisis de errores y una interfaz interactiva con **Gradio**.
+                <p>Este proyecto realiza la predicción de estrés basado en hábitos de sueño y parámetros físicos usando modelos de clasificación en Python. Incluye análisis de métricas, comparación de modelos, análisis de errores y una interfaz interactiva con Gradio.
 </p>
                 <a href="https://github.com/amymarlene/Modelado-de-datos-Clasificacion-Binaria" target="_blank" class="project-button">Ver repositorio</a>
             </div>
