--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
         <!-- Proyecto 2 -->
         <div class="project-card">
-            <img class="project-image" src="https://github.com/amymarlene/mi-portafolio/blob/main/Proyecto%202.png?raw=true" alt="Proyecto 2">
+            <img class="project-image" src="https://raw.githubusercontent.com/amymarlene/mi-portafolio/main/Proyecto%202.png" alt="Proyecto 2">
             <div class="project-content">
                 <h3>Modelado de datos para estilos y patrones de sueño</h3>
                 <p>Este proyecto realiza la predicción de estrés basado en hábitos de sueño y parámetros físicos usando modelos de clasificación en Python. Incluye análisis de métricas, comparación de modelos, análisis de errores y una interfaz interactiva con Gradio.</p>
