--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
         <div class="project-card">
             <img class="project-image" src="https://raw.githubusercontent.com/amymarlene/mi-portafolio/main/proyecto3.png" alt="Proyecto 3">
             <div class="project-content">
-                <h3>Proyecto 3</h3>
-                <p>Breve explicación de lo que hace el proyecto 3 y su propósito.</p>
+                <h3>Analisis de datos-Regresión Para Seguro médico</h3>
+                <p>Este proyecto analiza un dataset de 1,338 personas en Estados Unidos con información sobre costos de seguros médicos y variables demográficas y de salud.</p>
                 <a href="https://github.com/amymarlene/proyecto3" target="_blank" class="project-button">Ver repositorio</a>
             </div>
         </div>
