--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             <img class="profile-image" src="https://raw.githubusercontent.com/amymarlene/mi-portafolio/main/perfil.png" alt="Mi foto">
             <div class="about-text">
                 <h2>Amy Marlene</h2>
-                <p>¡Hola! Soy estudiante de Ingeniería Biomédica apasionada por los datos, la ciencia y el diseño. En este portafolio podrás explorar mis proyectos de análisis, modelado y visualización de datos con un toque creativo y pastel 💕.</p>
+                <p>¡Hola! Soy estudiante de Ingeniería Biomédica y este es mi portafolio de proyectos. Explora mis trabajos haciendo clic en cada tarjeta.</p>
             </div>
         </div>
     </section>
