--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
         <!-- Proyecto 3 -->
         <div class="project-card">
-            <img class="project-image" src="https://raw.githubusercontent.com/amymarlene/Analisis-De-Datos-Regresion/main/preview.png" alt="Proyecto 3">
+            <img class="project-image" src="https://github.com/amymarlene/mi-portafolio/blob/main/Proyecto3.png?raw=true" alt="Proyecto 3 - Análisis de Datos (Regresión" alt="Proyecto 3">
             <div class="project-content">
                 <h3>Análisis de datos - Regresión para seguro médico</h3>
                 <p>Analiza un dataset de 1,338 personas en EE. UU. con información sobre costos de seguros médicos y variables demográficas y de salud. Incluye correlación, regresión y visualización de resultados.</p>
