--- a/index.html
+++ b/index.html
@@ -210,11 +210,21 @@
 
         <!-- Proyecto 3 -->
         <div class="project-card">
-            <img class="project-image" src="https://github.com/amymarlene/mi-portafolio/blob/main/Proyecto3.png?raw=true" alt="Proyecto 3 - Análisis de Datos (Regresión" alt="Proyecto 3">
+            <img class="project-image" src="https://github.com/amymarlene/mi-portafolio/blob/main/Proyecto3.png?raw=true" alt="Proyecto 3 - Análisis de Datos (Regresión)">
             <div class="project-content">
                 <h3>Análisis de datos - Regresión para seguro médico</h3>
                 <p>Analiza un dataset de 1,338 personas en EE. UU. con información sobre costos de seguros médicos y variables demográficas y de salud. Incluye correlación, regresión y visualización de resultados.</p>
                 <a href="https://github.com/amymarlene/Analisis-De-Datos-Regresion" target="_blank" class="project-button">Ver repositorio</a>
+            </div>
+        </div>
+
+        <!-- Proyecto 4 -->
+        <div class="project-card">
+            <img class="project-image" src="https://github.com/amymarlene/mi-portafolio/blob/main/proyecto4.png?raw=true" alt="Proyecto 4 - Modelado de Datos de Regresión para Seguro Médico">
+            <div class="project-content">
+                <h3>Modelado de Datos de Regresión para Seguro Médico</h3>
+                <p>Predicción de costos de seguros médicos utilizando regresión y análisis de métricas. Incluye Random Forest como modelo final y una interfaz interactiva con Gradio para consultas de usuarios.</p>
+                <a href="https://github.com/amymarlene/Modelado-de-datos-Regresion-Para-Seguro-Medico" target="_blank" class="project-button">Ver repositorio</a>
             </div>
         </div>
     </section>
