--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Mi Portafolio</title>
     <!-- Fuente elegante y moderna -->
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600&display=swap" rel="stylesheet">
-
     <style>
         body {
             margin: 0;
@@ -14,7 +13,6 @@
             background: linear-gradient(to bottom right, #fde2e4, #f8edeb, #e2ece9, #cfe0e8);
             color: #4a3f55;
         }
-
         /* Header */
         header {
             background: linear-gradient(90deg, #f8cde0, #dbe7f0);
@@ -23,19 +21,16 @@
             padding: 2.5rem 1rem;
             box-shadow: 0 2px 10px rgba(0,0,0,0.1);
         }
-
         header h1 {
             font-size: 3rem;
             margin: 0;
             font-weight: 600;
         }
-
         header p {
             font-size: 1.2rem;
             margin-top: 0.5rem;
             font-weight: 500;
         }
-
         /* Sección About / Presentación */
         .about {
             padding: 3rem 1rem;
@@ -45,7 +40,6 @@
             margin: 2rem auto;
             box-shadow: 0 4px 20px rgba(0,0,0,0.05);
         }
-
         .about-container {
             display: flex;
             flex-wrap: wrap;
@@ -53,7 +47,6 @@
             justify-content: center;
             gap: 2rem;
         }
-
         .profile-image {
             width: 180px;
             height: 180px;
@@ -62,26 +55,22 @@
             border: 4px solid #d8bfd8;
             box-shadow: 0 4px 10px rgba(0,0,0,0.1);
         }
-
         .about-text {
             flex: 1;
             min-width: 250px;
             text-align: center;
         }
-
         .about-text h2 {
             font-size: 2.3rem;
             margin-bottom: 1rem;
             color: #5a3749;
         }
-
         .about-text p {
             font-size: 1.1rem;
             color: #555;
             max-width: 700px;
             margin: 0 auto;
         }
-
         /* Sección de proyectos */
         .projects {
             display: grid;
@@ -91,7 +80,6 @@
             max-width: 1200px;
             margin: 0 auto;
         }
-
         /* Tarjetas de proyectos */
         .project-card {
             background-color: #ffffff;
@@ -100,36 +88,30 @@
             overflow: hidden;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
-
         .project-card:hover {
             transform: translateY(-5px);
             box-shadow: 0 8px 25px rgba(0,0,0,0.15);
         }
-
         .project-image {
             width: 100%;
             height: 200px;
             object-fit: cover;
             border-bottom: 3px solid #eac7c7;
         }
-
         .project-content {
             padding: 1.5rem;
             text-align: center;
         }
-
         .project-content h3 {
             margin: 1rem 0 0.5rem 0;
             font-size: 1.5rem;
             color: #6b3f5a;
         }
-
         .project-content p {
             font-size: 1rem;
             color: #555;
             margin-bottom: 1.5rem;
         }
-
         /* Botón “Ver repositorio” */
         .project-button {
             display: inline-block;
@@ -142,12 +124,10 @@
             font-weight: 600;
             transition: background-color 0.3s, transform 0.2s;
         }
-
         .project-button:hover {
             background-color: #d8bfd8;
             transform: scale(1.05);
         }
-
         /* Footer */
         footer {
             text-align: center;
@@ -156,20 +136,17 @@
             font-size: 0.9rem;
             margin-top: 2rem;
         }
-
         footer a {
             color: #c98bb9;
             text-decoration: none;
             font-weight: 600;
         }
-
         footer a:hover {
             text-decoration: underline;
         }
     </style>
 </head>
 <body>
-
     <header>
         <h1>Mi Portafolio</h1>
         <p>Explora mis proyectos y sus repositorios en GitHub</p>
@@ -227,11 +204,21 @@
                 <a href="https://github.com/amymarlene/Modelado-de-datos-Regresion-Para-Seguro-Medico" target="_blank" class="project-button">Ver repositorio</a>
             </div>
         </div>
+
+        <!-- Proyecto 5 -->
+        <div class="project-card">
+            <img class="project-image" src="https://github.com/amymarlene/mi-portafolio/blob/main/pca.png?raw=true" alt="Proyecto 5 - Análisis de Datos Global Suicide">
+            <div class="project-content">
+                <h3>Global Suicide - Análisis de Datos</h3>
+                <p>Análisis de datos sobre tendencias de suicidio a nivel global, explorando variables demográficas y socioeconómicas, visualización de patrones y preparación para posibles modelos predictivos.</p>
+                <a href="https://github.com/amymarlene/Analisis-de-Datos---Segmentacion" target="_blank" class="project-button">Ver repositorio</a>
+            </div>
+        </div>
     </section>
 
     <footer>
         &copy; 2025 <a href="https://amymarlene.github.io/" target="_blank">amymarlene.github.io</a>. Todos los derechos reservados.
     </footer>
-
 </body>
 </html>
+
